--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get_it: ^7.2.0
   shared_preferences: ^2.0.15
   fluttertoast: ^8.0.9
+  syncfusion_flutter_barcodes: ^20.1.58
 
 dev_dependencies:
   flutter_test:
