--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   syncfusion_flutter_barcodes: ^20.1.58
   animation_load_progress: ^0.0.3
   top_snackbar_flutter: ^2.1.1
+  google_fonts: ^3.0.1
+  page_transition: ^2.0.9
 
 dev_dependencies:
   flutter_test:
